--- a/email-templates/verification-email.html
+++ b/email-templates/verification-email.html
@@ -40,7 +40,7 @@
         }
         
         .header {
-            background: linear-gradient(135deg, #1f2937 0%, #374151 100%);
+            background: linear-gradient(135deg, #222 0%, #000 100%);
             padding: 40px 20px;
             text-align: center;
         }
@@ -76,7 +76,7 @@
         
         .verify-button {
             display: inline-block;
-            background: linear-gradient(135deg, #1f2937 0%, #374151 100%);
+            background: linear-gradient(135deg, #222 0%, #000 100%);
             color: #ffffff !important;
             text-decoration: none;
             padding: 16px 32px;
